--- a/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
@@ -57,13 +57,13 @@ jobs:
           REPO_BRANCH: ${{ env.REPO_BRANCH }}
           REPO_URL: ${{ env.REPO_URL }}
         run: |
-          echo "::group::📦 克隆源代码"
-          # 变量验证
+          echo "::group::📥 克隆源代码"
+          # 严格变量检查
           echo "▼▼▼ 环境验证 ▼▼▼"
-          echo "仓库分支：'$REPO_BRANCH'"
-          echo "仓库地址：'$REPO_URL'"
+          echo "分支: '$REPO_BRANCH'"
+          echo "仓库: '$REPO_URL'"
 
-          # 分支存在性检查
+          # 分支存在性验证
           if ! git ls-remote --exit-code --heads "$REPO_URL" "$REPO_BRANCH"; then
             echo "::error::分支 $REPO_BRANCH 不存在！"
             git ls-remote --heads "$REPO_URL" | awk -F'/' '{print $3}'
@@ -76,17 +76,18 @@ jobs:
           set +x
 
           # 仓库验证
-          echo "▼▼▼ 仓库验证 ▼▼▼"
-          cd openwrt && git log -1 --pretty='%h - %s (%an)'
+          echo "▼▼▼ 仓库信息 ▼▼▼"
+          cd openwrt
+          echo "最新提交：$(git log -1 --pretty='%h - %s')"
           echo "OPENWRT_PATH=$(pwd)" >> $GITHUB_ENV
           echo "::endgroup::"
 
       - name: Generate Variables(生成变量)
         run: |
-          echo "::group::⚙️ 生成构建变量"
+          echo "::group::⚙️ 应用配置文件"
           cp -v "$CONFIG_FILE" "$OPENWRT_PATH/.config"
           cd "$OPENWRT_PATH" && make defconfig
-
+          
           echo "DEVICE_TARGET=$(awk -F'"' '/CONFIG_TARGET_BOARD/{print $2}' .config)" >> $GITHUB_ENV
           echo "DEVICE_SUBTARGET=$(awk -F'"' '/CONFIG_TARGET_SUBTARGET/{print $2}' .config)" >> $GITHUB_ENV
           echo "::endgroup::"
@@ -113,7 +114,7 @@ jobs:
           echo "::group::📁 迁移自定义文件"
           if [ -d "files" ]; then
             rsync -av --checksum files/ "$OPENWRT_PATH/files/"
-            echo "迁移文件数：$(find "$OPENWRT_PATH/files" -type f | wc -l)"
+            echo "已迁移文件数：$(find "$OPENWRT_PATH/files" -type f | wc -l)"
           else
             echo "未检测到自定义文件目录"
           fi
@@ -123,13 +124,14 @@ jobs:
           script_path="$GITHUB_WORKSPACE/$DIY_SCRIPT"
           chmod +x "$script_path"
           
+          # 显式传递环境变量
+          export REPO_BRANCH="${{ env.REPO_BRANCH }}"
+          export REPO_URL="${{ env.REPO_URL }}"
+          
           cd "$OPENWRT_PATH"
-          set -ex
+          set -x
           /usr/bin/time -v bash -e "$script_path"
-          echo "::endgroup::"
-
-          echo "::group::✅ 配置最终检查"
-          grep -E 'CONFIG_TARGET|CONFIG_PACKAGE' .config | sort
+          set +x
           echo "::endgroup::"
 
       - name: Download DL Package(下载DL软件包)
@@ -138,7 +140,7 @@ jobs:
           cd "$OPENWRT_PATH"
           make -j8 download
           find dl -size -1k -delete
-          echo "剩余dl包数量：$(find dl -type f | wc -l)"
+          echo "剩余有效包数：$(find dl -type f | wc -l)"
           echo "::endgroup::"
 
       - name: Compile Firmware(编译固件)
@@ -150,6 +152,7 @@ jobs:
           make -j$(($(nproc)+1)) || make -j1 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "VERSION_INFO=$(git -C $OPENWRT_PATH log -1 --pretty='[%h] %s (%ad)')" >> $GITHUB_ENV
           echo "::endgroup::"
 
       - name: Organize Files(整理文件)
@@ -158,7 +161,7 @@ jobs:
           echo "::group::📦 整理构建成果"
           cd "$OPENWRT_PATH/bin/targets"/*/*
           cp "$OPENWRT_PATH/.config" build.config
-          mkdir -p packages && mv ../packages/*/*.ipk packages/ || true
+          mkdir -p packages && mv ../packages/*/*.ipk packages/ 2>/dev/null || true
           tar -zcf Packages.tar.gz packages
           echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
           echo "::endgroup::"
@@ -170,15 +173,11 @@ jobs:
           name: ${{ env.FIRMWARE_TAG }}-${{ env.DEVICE_TARGET }}-${{ env.DATE }}
           path: ${{ env.FIRMWARE_PATH }}
 
-      - name: Upload Firmware To Release(发布正式版)
+      - name: Upload Firmware To Release(发布固件)
         if: env.FIRMWARE_RELEASE == 'true'
-        uses: softprops/action-gh-release@v2  # 建议升级到v2版本
+        uses: softprops/action-gh-release@v2
         with:
-          name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
-          allowUpdates: false
-          tag: ${{ env.FIRMWARE_TAG }}-${{ env.FILE_DATE }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: ${{ env.FIRMWARE_PATH }}/*
+          tag_name: ${{ env.FIRMWARE_TAG }}-${{ env.DATE }}
           files: |
             ${{ env.FIRMWARE_PATH }}/*.bin
             ${{ env.FIRMWARE_PATH }}/Packages.tar.gz
@@ -186,17 +185,14 @@ jobs:
           body: |
             **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
             ### 📒 固件信息(无WIFI)
-            - 🚀 内核版本：${{ env.VERSION_KERNEL }}
-            - 📅 编译日期：${{ env.DATE }}
-            - 🖥️ 目标平台：${{ env.DEVICE_TARGET }} (${{ env.DEVICE_SUBTARGET }})
-            - 📎 源码仓库：[${{ env.REPO_BRANCH }}分支](${{ env.REPO_URL }}/tree/${{ env.REPO_BRANCH }})
+            - 内核版本：${{ env.VERSION_KERNEL }}
+            - 编译日期：${{ env.DATE }}
+            - 目标平台：${{ env.DEVICE_TARGET }} (${{ env.DEVICE_SUBTARGET }})
+            - 源码分支：[${{ env.REPO_BRANCH }}](${{ env.REPO_URL }}/tree/${{ env.REPO_BRANCH }})
             
             ### 🔧 默认配置
-            - 🌐 管理地址：192.168.1.1
-            - 🔑 管理员密码：password
-            - 📦 包含软件包：$(zcat ${{ env.FIRMWARE_PATH }}/Packages.tar.gz | grep Package: | wc -l)个
+            - 管理地址：192.168.1.1
+            - 管理员密码：password
             
             ### 📋 版本记录
             ${{ env.VERSION_INFO }}
-
-            > 校验信息：$(sha256sum ${{ env.FIRMWARE_PATH }}/*.bin | awk '{print $1}')
