--- a/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
@@ -1,199 +1,193 @@
+
 name: IPQ60XX-6.12-NOWIFI
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 18 * * *"  # UTC时间18:00（北京时间凌晨2点）
+    - cron: 0 19 * * *
+
+env:
+  REPO_URL: https://github.com/LiBwrt/openwrt-6.x.git
+  REPO_BRANCH: kernel-6.12
+  CONFIG_FILE: configs/ipq60xx-6.12-nowifi.config
+  DIY_SCRIPT: diy-script.sh
+  CLASH_KERNEL: amd64
+  CACHE_TOOLCHAIN: true
+  UPLOAD_BIN_DIR: false
+  FIRMWARE_RELEASE: true
+  FIRMWARE_TAG: IPQ60XX-6.12-NOWIFI
+  TZ: Asia/Shanghai
 
 jobs:
   Build:
     runs-on: ubuntu-22.04
-    env:
-      REPO_URL: https://github.com/LiBwrt/openwrt-6.x.git
-      REPO_BRANCH: kernel-6.12
-      CONFIG_FILE: configs/ipq60xx-6.12-nowifi.config
-      DIY_SCRIPT: diy-script.sh
-      CLASH_KERNEL: amd64
-      CACHE_TOOLCHAIN: true
-      UPLOAD_BIN_DIR: false
-      FIRMWARE_RELEASE: true
-      FIRMWARE_TAG: IPQ60XX-6.12-NOWIFI
-      TZ: Asia/Shanghai
 
     steps:
       - name: Check Server Performance(检查服务器性能)
         run: |
-          echo "::group::🖥️ 服务器性能检查"
-          echo "警告：分配的服务器资源可能受限，建议控制插件数量！"
-          echo "CPU型号：$(lscpu | grep 'Model name' | cut -d: -f2 | sed 's/^ *//')"
-          echo "CPU核心数：$(nproc)"
-          echo "内存总量：$(free -h | awk '/Mem/{print $2}')"
-          echo "存储空间："
-          df -hT
-          echo "::endgroup::"
+          echo "警告⚠"
+          echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+          echo -e "已知CPU型号（降序）：7763，8370C，8272CL，8171M，E5-2673 \n"
+          echo "--------------------------CPU信息--------------------------"
+          echo "CPU物理数量：$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
+          echo -e "CPU核心信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+          echo "--------------------------内存信息--------------------------"
+          echo "已安装内存详细信息："
+          echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
+          echo "--------------------------硬盘信息--------------------------"
+          echo "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
 
       - name: Initialization Environment(初始化环境)
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          echo "::group::🧹 环境初始化"
-          sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d/* || true
-          sudo apt-get -qq update
-          sudo apt-get -qq install $(curl -fsSL is.gd/depends_ubuntu_2204)
+          docker rmi $(docker images -q)
+          sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
+          sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
+          sudo -E apt-get -y update
+          sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
+          sudo -E systemctl daemon-reload
+          sudo -E apt-get -y autoremove --purge
+          sudo -E apt-get -y clean
           sudo timedatectl set-timezone "$TZ"
-          echo "::endgroup::"
 
       - name: Combine Disks(合并磁盘)
         uses: easimon/maximize-build-space@master
         with:
           swap-size-mb: 1024
+          temp-reserve-mb: 100
           root-reserve-mb: 1024
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
 
       - name: Clone Source Code(克隆源代码)
-        env:
-          REPO_BRANCH: ${{ env.REPO_BRANCH }}
-          REPO_URL: ${{ env.REPO_URL }}
         run: |
-          echo "::group::📥 克隆源代码"
-          # 严格变量检查
-          echo "▼▼▼ 环境验证 ▼▼▼"
-          echo "分支: '$REPO_BRANCH'"
-          echo "仓库: '$REPO_URL'"
-
-          # 分支存在性验证
-          if ! git ls-remote --exit-code --heads "$REPO_URL" "$REPO_BRANCH"; then
-            echo "::error::分支 $REPO_BRANCH 不存在！"
-            git ls-remote --heads "$REPO_URL" | awk -F'/' '{print $3}'
-            exit 1
-          fi
-
-          # 执行克隆
-          set -x
-          git clone --progress --depth 1 -b "${REPO_BRANCH}" "${REPO_URL}" openwrt
-          set +x
-
-          # 仓库验证
-          echo "▼▼▼ 仓库信息 ▼▼▼"
-          cd openwrt
-          echo "最新提交：$(git log -1 --pretty='%h - %s')"
-          echo "OPENWRT_PATH=$(pwd)" >> $GITHUB_ENV
-          echo "::endgroup::"
+          df -hT $GITHUB_WORKSPACE
+          git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
+          cd openwrt --tags
+          echo "OPENWRT_PATH=$PWD" >> $GITHUB_ENV
+          VERSION_INFO=$(git show -s --date=short --format="作者: %an<br/>时间: %cd<br/>内容: %s<br/>hash: %H")
+          echo "VERSION_INFO=$VERSION_INFO" >> $GITHUB_ENV
+          VERSION_KERNEL=$(grep -oP 'LINUX_KERNEL_HASH-\K[0-9]+\.[0-9]+\.[0-9]+' include/kernel-6.12)
+          echo "VERSION_KERNEL=$VERSION_KERNEL" >> $GITHUB_ENV
 
       - name: Generate Variables(生成变量)
         run: |
-          echo "::group::⚙️ 应用配置文件"
-          cp -v "$CONFIG_FILE" "$OPENWRT_PATH/.config"
-          cd "$OPENWRT_PATH" && make defconfig
-          
-          echo "DEVICE_TARGET=$(awk -F'"' '/CONFIG_TARGET_BOARD/{print $2}' .config)" >> $GITHUB_ENV
-          echo "DEVICE_SUBTARGET=$(awk -F'"' '/CONFIG_TARGET_SUBTARGET/{print $2}' .config)" >> $GITHUB_ENV
-          echo "::endgroup::"
+          cp $CONFIG_FILE $OPENWRT_PATH/.config
+          cd $OPENWRT_PATH
+          make defconfig > /dev/null 2>&1
+          SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
+          echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
+          DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
+          echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
+          DEVICE_SUBTARGET=$(cat .config | grep CONFIG_TARGET_SUBTARGET | awk -F '"' '{print $2}')
+          echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
 
       - name: Cache Toolchain(缓存工具链)
         if: env.CACHE_TOOLCHAIN == 'true'
-        uses: actions/cache@v3
+        uses: HiGarfield/cachewrtbuild@main
         with:
-          path: |
-            ${{ env.OPENWRT_PATH }}/dl
-            ${{ env.OPENWRT_PATH }}/build_dir
-          key: ${{ runner.os }}-${{ env.DEVICE_TARGET }}-${{ hashFiles('${{ env.OPENWRT_PATH }}/.config') }}
+          ccache: false
+          mixkey: ${{ env.SOURCE_REPO }}-${{ env.REPO_BRANCH }}-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
+          prefix: ${{ env.OPENWRT_PATH }}
 
       - name: Install Feeds(安装feeds)
         run: |
-          echo "::group::📦 安装软件源"
-          cd "$OPENWRT_PATH"
+          cd $OPENWRT_PATH
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-          echo "::endgroup::"
-          
+
       - name: Load Custom Configuration(加载自定义配置)
         run: |
-          # ======================
-          # 迁移自定义文件
-          # ======================
-          echo "::group::📁 迁移自定义文件"
-          if [ -d "files" ]; then
-            echo "检测到自定义文件目录，正在同步..."
-            mkdir -p "$OPENWRT_PATH/files"
-            rsync -av --checksum files/ "$OPENWRT_PATH/files/"
-          else
-            echo "未找到自定义文件目录"
-          fi
-          echo "::endgroup::"
+          [ -e files ] && mv files $OPENWRT_PATH/files
+          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
+          chmod +x $DIY_SCRIPT
+          cd $OPENWRT_PATH
+          bash $GITHUB_WORKSPACE/$DIY_SCRIPT
 
-          # ======================
-          # 执行自定义脚本
-          # ======================
-          echo "::group::🛠️ 执行自定义脚本"
-          export REPO_BRANCH="${{ env.REPO_BRANCH }}"  # 显式传递变量
-          export REPO_URL="${{ env.REPO_URL }}"
-          export BUILD_DIR="$OPENWRT_PATH"  # 确保BUILD_DIR变量存在
-          
-          echo "▼▼▼ 调试信息 ▼▼▼"
-          echo "当前分支: $REPO_BRANCH"
-          echo "仓库地址: $REPO_URL"
-          echo "构建目录: $BUILD_DIR"
-
-          # 添加严格的错误处理
-          set -euo pipefail
-          chmod +x "$DIY_SCRIPT"
-          
-          # 执行脚本时传递参数
-          /usr/bin/time -v bash -x "$DIY_SCRIPT" "$REPO_BRANCH" "$REPO_URL" "$BUILD_DIR"
-          echo "::endgroup::"
-      - name: Compile Firmware(编译固件)
-        timeout-minutes: 120
+      - name: Download DL Package(下载DL软件包)
         run: |
-          echo "::group::🔥 开始编译"
-          cd "$OPENWRT_PATH"
-          echo "使用线程数：$(($(nproc)+1))"
-          make -j$(($(nproc)+1)) || make -j1 V=s
+          cd $OPENWRT_PATH
+          make defconfig
+          make download -j8
+          find dl -size -1024c -exec ls -l {} \;
+          find dl -size -1024c -exec rm -f {} \;
+
+      - name: Compile Firmware(开始编译固件)
+        id: compile
+        run: |
+          cd $OPENWRT_PATH
+          echo -e "$(nproc) thread compile"
+          make -j$(nproc) || make -j1 || make -j1 V=s
+          if [ $? -ne 0 ]; then
+            echo "编译失败，请检查日志！"
+            exit 1
+          fi
           echo "status=success" >> $GITHUB_OUTPUT
-          echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-          echo "VERSION_INFO=$(git -C $OPENWRT_PATH log -1 --pretty='[%h] %s (%ad)')" >> $GITHUB_ENV
-          echo "::endgroup::"
+          echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+          echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+
+      - name: Check Space Usage(检查空间使用情况)
+        if: (!cancelled())
+        run: df -hT
 
       - name: Organize Files(整理文件)
-        if: success()
+        if: steps.compile.outputs.status == 'success'
         run: |
-          echo "::group::📦 整理构建成果"
-          cd "$OPENWRT_PATH/bin/targets"/*/*
-          cp "$OPENWRT_PATH/.config" build.config
-          mkdir -p packages && mv ../packages/*/*.ipk packages/ 2>/dev/null || true
-          tar -zcf Packages.tar.gz packages
-          echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
-          echo "::endgroup::"
+          # 进入 bin/targets 目录
+          cd $OPENWRT_PATH/bin/targets/*/*
 
-      - name: Upload Firmware To Artifact(上传测试版)
-        if: env.FIRMWARE_RELEASE != 'true'
-        uses: actions/upload-artifact@v4
+          # 打印当前目录结构（调试用）
+          echo "Current directory:"
+          ls -R
+
+          # 复制 .config 文件
+          cp $OPENWRT_PATH/.config build.config
+
+          # 移动软件包文件（根据实际扩展名调整）
+          mkdir -p packages
+          if ls $OPENWRT_PATH/bin/packages/*/*/*.apk > /dev/null 2>&1; then
+            mv -f $OPENWRT_PATH/bin/packages/*/*/*.apk packages
+          else
+            echo "No .apk files found in packages directory."
+          fi
+
+          # 打包 packages 目录
+          tar -zcf Packages.tar.gz packages
+
+          # 清理不必要的文件
+          rm -rf packages feeds.buildinfo version.buildinfo
+
+          # 设置 FIRMWARE_PATH 环境变量
+          echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
+
+      - name: Upload Firmware To Artifact(将固件上传到Artifact)
+        if: steps.compile.outputs.status == 'success' && env.FIRMWARE_RELEASE != 'true'
+        uses: actions/upload-artifact@main
         with:
-          name: ${{ env.FIRMWARE_TAG }}-${{ env.DEVICE_TARGET }}-${{ env.DATE }}
+          name: ${{ env.SOURCE_REPO }}-firmware-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.FILE_DATE }}
           path: ${{ env.FIRMWARE_PATH }}
 
       - name: Upload Firmware To Release(发布固件)
-        if: env.FIRMWARE_RELEASE == 'true'
-        uses: softprops/action-gh-release@v2
+        if: steps.compile.outputs.status == 'success' && env.FIRMWARE_RELEASE == 'true'
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ env.FIRMWARE_TAG }}-${{ env.DATE }}
-          files: |
-            ${{ env.FIRMWARE_PATH }}/*.bin
-            ${{ env.FIRMWARE_PATH }}/Packages.tar.gz
-            ${{ env.FIRMWARE_PATH }}/build.config
+          name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
+          allowUpdates: false  # 修改为false，确保不覆盖旧固件
+          tag: ${{ env.FIRMWARE_TAG }}-${{ env.FILE_DATE }}  # 添加日期作为tag后缀，确保每次发布都是唯一的
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: ${{ env.FIRMWARE_PATH }}/*
           body: |
             **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
             ### 📒 固件信息(无WIFI)
-            - 内核版本：${{ env.VERSION_KERNEL }}
-            - 编译日期：${{ env.DATE }}
-            - 目标平台：${{ env.DEVICE_TARGET }} (${{ env.DEVICE_SUBTARGET }})
-            - 源码分支：[${{ env.REPO_BRANCH }}](${{ env.REPO_URL }}/tree/${{ env.REPO_BRANCH }})
-            
-            ### 🔧 默认配置
-            - 管理地址：192.168.1.1
-            - 管理员密码：password
-            
-            ### 📋 版本记录
-            ${{ env.VERSION_INFO }}
+            - 无WIFI带有线NSS的6.12内核固件
+            - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 OpenWrt 固件
+            - ⚽ 固件源码: ${{ env.REPO_URL }}
+            - 💝 源码分支: ${{ env.REPO_BRANCH }}
+            - 🌐 默认地址: 192.168.1.1
+            - 🔑 默认密码: password
+            ### 🧊 固件版本
+            - 固件内核版本：${{ env.VERSION_KERNEL }}
+            - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
+            - ${{ env.VERSION_INFO }}
