--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -71,8 +71,7 @@ CONFIG_KERNEL_NET_CLS_CGROUP=y
 CONFIG_KERNEL_PERF_EVENTS=y
 # CONFIG_KERNEL_PREEMPT_RCU is not set
 CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_MADVISE=y
-
+CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_NSS_DRV_IGS_ENABLE=y
 CONFIG_NSS_DRV_MAPT_ENABLE=y
@@ -360,15 +359,12 @@ CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 
-#docker组件启用但缺少cgroupfs支持
-CONFIG_PACKAGE_cgroupfs-lib=y
-
 # Compile来自Z大
 CONFIG_USE_APK=n
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53 -mtune=cortex-a53"
+CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
 
 # BUSYBOX
 CONFIG_BUSYBOX_CUSTOM=y
@@ -415,18 +411,6 @@ CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-#dnsmasq
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dnsmasq=n
-CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=y
-CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-
-# dnsmasq关联依赖
-# IPSET 内核模块
-CONFIG_PACKAGE_kmod-ipt-ipset=y  
-# iptables 扩展
-CONFIG_PACKAGE_iptables-mod-ipset=y  
 
 #  Coremark
 CONFIG_PACKAGE_coremark=y
